# LearnHaskell

./: .gitignore  .gitmodules  NOTES.md  README.md
Begining_Haskell/TryCabal/: ChangeLog.md  TryCabal.cabal
Begining_Haskell/chapter2/: LICENSE  chapter2.cabal
Good_Readings/: list.md
Learn_You_a_Haskell/: all.hs
Learn_You_a_Haskell/10_Functionally_Solving_Problems/: NOTES.md  reversePolishNotation.hs  shortestPath.hs
Learn_You_a_Haskell/11_Functor_Applicative_Monoids/: NOTES.md  badFuctor.hs  lazyNewType.hs  sequenceA.hs  simpleExample.hs
Learn_You_a_Haskell/2_Starting_Out/: list.hs  list_comprehension.hs
Learn_You_a_Haskell/4_Sytax_in_Functions/: Makefile  ex_let.hs  ex_where.hs  guard.hs  pattern_match.hs
Learn_You_a_Haskell/5_Recursion/: fibo.hs  maximum.hs  quick_sort.hs  quick_sort.py  repeat.hs  replicate.hs  reverse.hs  take.hs  zip.hs
Learn_You_a_Haskell/6_High_Order_Function/: applyTwice.hs  compare.hs  curry_with_lambda.py  largestDiv.hs  note.md  other.hs  quick_sort.hs  scan.hs  zipWith.hs  zipWith.py
Learn_You_a_Haskell/7_Modules/: ImportGeometry.hs  encode.hs  ex_Data.List.hs  numUniques.hs  qualified.hs
Learn_You_a_Haskell/8_Making_Our_Own_Types_and_Typeclasses/: Binary_Tree.hs  Either_Example.hs  Record.hs  Recursive_Type.hs  Shape.hs  SlopyBool.hs  TypeClass2.hs  TypeFoo.hs  Vector.hs
RealWorldHaskell/: case.hs  where.hs
WikiBook/: README.md
ch02/: lastButOne.hs
ch03/: BookStore.hs
stack-proj/: README.md
stack-proj/simple-proj2/: LICENSE  README.md  simple-proj2.cabal
stack-proj/simple-proj2/src/: Main  Main.hi
(+41 files in other folders)
