name:                simple-proj2
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/dboyliao/simple-proj2#readme
license:             BSD3
license-file:        LICENSE
author:              dboyliao
maintainer:          qmalliao@gmail.com
copyright:           dboyliao
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable simple-proj2
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
